# similarity_measures

./: .gitignore  .swp  .travis.yml  CHANGELOG.md  CHANGLOG.md  Examples_of_Similarity_Measures.ipynb  LICENSE  MANIFEST.in  README.md  README.rst  benchmark.py  build_docs.bat  build_docs.sh  frechet_distance_recursion_vs_dp.ipynb  pyproject.toml  readme.md  setup.py  torch_DTW_demo.ipynb
.github/workflows/: ci.yml  cron.yml
code/: Examples_of_Similarity_Measures.ipynb  acdc.py  area.py  areaShoeCalc.py  df.py  dtw.py  pcmTest.py  similarity_measures.py  similaritymeasures.py  test.py
code/frechet_distance/: cfrechet.c  cfrechet.pyx  compile_cython.sh  ex.py  frechet.py  true.npy
data/: noise.npy  noise.txt  true.txt
docs/: index.html  search.js  similaritymeasures.html  version.html
docs/similaritymeasures/: similaritymeasures.html  version.html
images/: Fig2.eps
similaritymeasures/: __init__.py  similaritymeasures.py
similaritymeasures/cy_similaritymeasures/: benchmark.py  cy_similaritymeasures.pyx  readme.md  setup.py
tests/: tests.py
